--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div id="container">
+        <div id="display">
+
+        </div>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div>/</div>
+        </div>
+        <div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>*</div>
+        </div>
+        <div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>-</div>
+        </div>
+        <div>
+            <div>7</div>
+            <div>8</div>
+            <div>9</div>
+            <div>+</div>
+        </div>
+        <div>
+            <div></div>
+            <div>0</div>
+            <div></div>
+            <div>=</div>
+        </div>
+    </div>
+
+
     <script>
         const add = (num1, num2) => num1 + num2;
 
