--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
         });
 
         function operate(operator, a, b) {
-                console.log(operator);
                 switch (operator) {
                     case 'add':
                         return add (a, b);
@@ -124,6 +123,26 @@
             tempValue = ''; 
             };
         });
+
+        document.querySelectorAll('.button').forEach((button) => {
+            button.addEventListener('mouseover', () => {
+                button.classList.add('hover');
+            });
+            button.addEventListener('mouseout', () => {
+                button.classList.remove('hover');
+            })
+        });
+
+        document.querySelectorAll('.button').forEach((button) => {
+            button.addEventListener('mousedown', () => {
+                button.classList.add('pressed');
+            });
+            button.addEventListener('mouseup', () => {
+                button.classList.remove('pressed');
+            })
+        });
+
+
 
     </script>
 </body>
