Add 0 to display after clear all button

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             tempValue = '';
             currentOperation = '';
             currentTotal = 0;
-            updateDisplay(tempValue);
+            updateDisplay(0);
         }
 
         document.querySelector('.clear').addEventListener('click', () => {
