--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div>
             <div data-value="" class="button clear">AC</div>
             <div data-value="" class="button backspace">del</div>
-            <div data-value="" class="button" id="reverseSign">( - )</div>
+            <div data-value="" class="button" id="signChange">( - )</div>
             <div data-value="divide" class="button operator">/</div>
         </div>
         <div>
@@ -123,7 +123,9 @@
         });
 
         const equals = document.querySelector('.equals');
-        equals.addEventListener('click', () => {
+        equals.addEventListener('click', evaluate);
+
+        function evaluate() {
             if(currentTotal !== 0){
             currentTotal = operate(currentOperation, currentTotal, +tempValue);
             if (currentTotal === Infinity || currentTotal === Infinity) {
@@ -136,24 +138,28 @@
             currentOperation = ''; 
             dotButtonUsed = false;
             };
-        });
+        };
 
         const dot = document.querySelector('#dot');
-        dot.addEventListener('click', () => {
+        dot.addEventListener('click', addDecimal);
+
+        function addDecimal () {
             if(tempValue !== '' && dotButtonUsed === false){
                 tempValue += '.';
                 updateDisplay(tempValue);
                 dotButtonUsed = true;
             };
-        });
+        };
 
-        const reverseSign = document.querySelector('#reverseSign');
-        reverseSign.addEventListener('click', () => {
+        const signChange = document.querySelector('#signChange');
+        signChange.addEventListener('click', reverseSign);
+
+        function reverseSign () {
             if(tempValue !== ''){
                 tempValue = +tempValue * -1;
                 updateDisplay(tempValue);
-            }
-        }) 
+            };
+        };
 
         document.querySelectorAll('.button').forEach((button) => {
             button.addEventListener('mouseover', () => {
@@ -174,14 +180,16 @@
         });
 
         const backspace = document.querySelector('.backspace')
-        backspace.addEventListener('click', () => {
+        backspace.addEventListener('click', deleteLastInput);
+
+        function deleteLastInput (){
             if(tempValue === ''){
                 return;
             } else{
                 tempValue = tempValue.substr(0,tempValue.length-1);
                 updateDisplay(tempValue);
-            }
-        })
+            };
+        };
 
     </script>
 </body>
